[package]
name = "stable"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
